[package]
name = "iterate-proc-macro"
version = "2.0.0"
edition = "2018"
authors = ["Nathan West <Lucretiel@gmail.com>"]

readme = "README.md"
license = "MPL-2.0"
description = "Support crate for `iterate`"
repository = "https://github.com/Lucretiel/iterate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.6.1"
itertools = "0.10.0"
joinery = { version = "2.1.0", features = ["token-stream"] }
proc-macro2 = "1.0.27"
quote = "1.0.9"
syn = { version = "1.0.72", features = ["full", "visit"] }

[lib]
proc-macro = true
